--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -7,8 +7,8 @@
     </p>
 
     <p>
-      <%= f.label :text %><br>
-      <%= f.text_area :text %>
+      <%= f.label :description %><br>
+      <%= f.text_area :description %>
     </p>
 
     <p>
