Validation for issues

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
-<h2>Welcome!</h2>
+<h1>Hello, BODs!</h1>
+<%= link_to 'Kings Court Issues', controller: 'issues' %>
 
 <p>
   The time is now: <%= Time.now %>
