--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -1,6 +1,22 @@
 <h1>New Issue</h1>
 
 <%= form_for :issue, url: issues_path do |f| %>
+
+    <% if @issue.errors.any? %>
+        <div id="error_explanation">
+          <h2>
+            <%=pluralize(@issue.errors.count, "error") %> prohibited
+            this issue from being saved:
+          </h2>
+          <ul>
+            <% @issue.errors.full_messages.each do |msg| %>
+                <li> <%= msg %> </li>
+            <% end %>
+          </ul>
+        </div>
+        <% end %>
+
+
     <p>
       <%= f.label :title %><br>
       <%= f.text_field :title %>
@@ -15,3 +31,5 @@
       <%= f.submit %>
     </p>
 <% end %>
+
+<%= link_to 'Back', issues_path %>
