--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -12,6 +12,8 @@
     <tr>
         <td><%= issue.title %></td>
         <td><%= issue.description %></td>
+      <td><%= link_to 'Show', issue_path(issue) %></td>
+      <td><%= link_to 'Edit', edit_issue_path(issue) %></td>
     </tr>
   <% end %>
 </table>
