--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -14,6 +14,9 @@
         <td><%= issue.description %></td>
       <td><%= link_to 'Show', issue_path(issue) %></td>
       <td><%= link_to 'Edit', edit_issue_path(issue) %></td>
+      <td><%= link_to 'Destroy', issue_path(issue),
+                      method: :delete,
+                      data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
