--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -9,12 +9,7 @@
 </p>
 
 <h2>Notes:</h2>
-<% @issue.notes.each do |note| %>
-    <p>
-      <strong>Comment:</strong>
-      <%= note.item %>
-    </p>
-<% end %>
+<%= render @issue.notes %>
 
 <h2>Add a note:</h2>
 <%= form_for([@issue, @issue.notes.build]) do |f| %>
