Add Static Pages

--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -10,7 +10,8 @@
 
 <p>
   <strong>Submitted By:</strong>
-  <%= @issue.user_id %>
+  <%= @issue.user.email %>
+  <%= @email %>
 </p>
 
 <h2>Notes:</h2>
