Add content to StaticPages

--- a/app/views/static_pages/board.html.erb
+++ b/app/views/static_pages/board.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#board</h1>
-<p>Find me in app/views/static_pages/board.html.erb</p>
+<% provide(:title, "Our Board") %>
+<h1>Meet the Board</h1>
+<p>
+  <ul>
+    <li>President Patrick Forest</li>
+    <li>Vice-President Jabari Reeves</li>
+    <li>Treasurer Jian Lin</li>
+    <li>Secretary Sheri Wilson</li>
+  </ul>
+</p>
