--- a/app/views/static_pages/minutes.html.erb
+++ b/app/views/static_pages/minutes.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#minutes</h1>
-<p>Find me in app/views/static_pages/minutes.html.erb</p>
+<% provide(:title, "Meeting Minutes") %>
+<h1>Meeting Minutes</h1>
+<p>
+  This is where meeting minutes will go.
+</p>
+
