Add application helper for page titles

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Kings Court Homeowners Association") %>
+<% provide(:title, "Home") %>
 <h1>King's Court Homeowner's Association</h1>
 <p>
     Welcome to the website for the King's Court Homeowners Association.
