--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,22 +1,24 @@
 <% provide(:title, "Home") %>
-<h1>Welcome Home to King's Court</h1>
-<p>
-    Welcome to the website for the King's Court Homeowners Association.  Please feel free to contact us with comments or suggestions.
-</p>
+<div class="container">
+  <h1>Welcome Home to King's Court</h1>
+  <h6> Welcome to the website for the King's Court Homeowners Association.  Please feel free to contact us with comments or suggestions.</h6>
+</div>
 
-<div>
-  <h3>Welcome</h3>
-  <ul class="menu">
-    <li>Home</li>
-    <li>About Us</li>
-    <li>Contact Us</li>
-  </ul>
+<div class="container">
+  <div class="jumbotron">
+    <h3>Welcome</h3>
+    <ul class="menu">
+      <li>Home</li>
+      <li>About Us</li>
+      <li>Contact Us</li>
+    </ul>
 
-  <h3>Members</h3>
-  <ul class="menu">
-    <li><%= link_to "Meet the Board", static_pages_board_path %></li>
-    <li>Member Directory</li>
-    <li><%= link_to "Board Meeting Minutes Archive", static_pages_minutes_path %></li>
-    <li>Newsletter Archive</li>
-  </ul>
+    <h3>Members</h3>
+    <ul class="menu">
+      <li><%= link_to "Meet the Board", static_pages_board_path %></li>
+      <li>Member Directory</li>
+      <li><%= link_to "Board Meeting Minutes Archive", static_pages_minutes_path %></li>
+      <li>Newsletter Archive</li>
+    </ul>
+  </div>
 </div>
