adds jpegs for carousel

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 <%= yield %>
 
   <footer class="panel-footer">
-    Designed by Sheri Wilson
+    Webmaster: Sheri Wilson
   </footer>
 </body>
 </html>
