--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,6 +16,48 @@
     </nav>
 
 <div class="container">
+  <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+    <!--Carousel indicators-->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active">
+        <%=image_tag "IMG_0672.jpg" %>
+        <h3>Picture 1</h3>
+        <div class="carousel-caption">
+          <h4>Our Home on Madison Street</h4>
+        </div>
+      </div>
+      <div class="item">
+        <%=image_tag "IMG_1125.jpg" %>
+        <h3>Picture 2</h3>
+        <div class="carousel-caption">
+          <h4>Our Courtyard</h4>
+        </div>
+      </div>
+      <div class="item">
+        <h3>Picture 3</h3>
+        <div class="carousel-caption">
+          <h4>Our Pool</h4>
+        </div>
+      </div>
+    </div>
+    <!-- Carousel controls -->
+    <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="carousel-control right" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+  </div>
+  </div>
+</div>
+
+
+<div class="container">
   <div class="jumbotron">
     <h3>Members</h3>
     <ul class="menu">
@@ -26,3 +68,9 @@
     </ul>
   </div>
 </div>
+
+<script>
+    $(document).ready(function(){
+        $('#myCarousel').carousel();
+    });
+</script>
