--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Home") %>
 <div class="container">
-  <h1>Welcome Home to King's Court</h1>
+  <h1><span id="welcome"><%=image_tag "Welcome-Home-Logo.jpg" %></span> to King's Court Condominiums</h1>
   <h6> Welcome to the website for the King's Court Homeowners Association.  Please feel free to contact us with comments or suggestions.</h6>
 </div>
     <nav class="navbar navbar-default" role="navigation">
@@ -10,56 +10,57 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
+            <li><a href="#members">Members</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
 <div class="container">
-  <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
-    <!--Carousel indicators-->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="item active">
-        <%=image_tag "IMG_0672.jpg" %>
-        <h3>Picture 1</h3>
-        <div class="carousel-caption">
-          <h4>Our Home on Madison Street</h4>
+  <div class="jumbotron">
+    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel" style="width: 400px; margin: 0 auto">
+      <!--Carousel indicators-->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <%=image_tag "IMG_0672.jpg" %>
+          <h3>Picture 1</h3>
+          <div class="carousel-caption">
+            <h4>Our Home on Madison Street</h4>
+          </div>
+        </div>
+        <div class="item">
+          <%=image_tag "IMG_1125.jpg" %>
+          <h3>Picture 2</h3>
+          <div class="carousel-caption">
+            <h4>Our Courtyard</h4>
+          </div>
+        </div>
+        <div class="item">
+          <h3>Picture 3</h3>
+          <div class="carousel-caption">
+            <h4>Our Pool</h4>
+          </div>
         </div>
       </div>
-      <div class="item">
-        <%=image_tag "IMG_1125.jpg" %>
-        <h3>Picture 2</h3>
-        <div class="carousel-caption">
-          <h4>Our Courtyard</h4>
-        </div>
-      </div>
-      <div class="item">
-        <h3>Picture 3</h3>
-        <div class="carousel-caption">
-          <h4>Our Pool</h4>
-        </div>
-      </div>
+      <!-- Carousel controls -->
+      <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="carousel-control right" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
     </div>
-    <!-- Carousel controls -->
-    <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="carousel-control right" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
-  </div>
   </div>
 </div>
 
-
 <div class="container">
   <div class="jumbotron">
-    <h3>Members</h3>
+    <h3 id="members">Members</h3>
     <ul class="menu">
       <li><%= link_to "Meet the Board", static_pages_board_path %></li>
       <li>Member Directory</li>
