adds custom styling to home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#welcome {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
