--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Home") %>
-<div class="container">
-  <h1><span id="welcome"><%=image_tag "Welcome-Home-Logo.jpg" %></span> to King's Court Condominiums</h1>
+<div id="heading" class="container">
+  <h1><%=image_tag "Welcome-Home-Logo.jpg" %><span id="welcome">to King's Court Condominiums</span></h1>
   <h6> Welcome to the website for the King's Court Homeowners Association.  Please feel free to contact us with comments or suggestions.</h6>
 </div>
     <nav class="navbar navbar-default" role="navigation">
