--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<--Members interest areas-->
+<!--Members interest areas-->
 <div class="container">
   <div class="jumbotron">
     <h3 id="members">Members</h3>
