moves page navigation to application layout

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,17 +1,17 @@
 <% provide(:title, "About Us") %>
 
-<div class="container-fluid">
-  <h1>About Us</h1>
+<div class="container">
+  <h2>About Us</h2>
   <p>
-    King's Court Condominiums is located at 1428 Madison St in the city of Oakland, CA.  We are on the west
-    side of beautiful Lake Merritt and only 2 blocks from the fabulous and famous Oakland Chinatown.  Our community
+    King's Court Condominiums is located at 1428 Madison Street in the city of Oakland, CA.  We are on the west
+    side of beautiful Lake Merritt and only 2 blocks from the famous and fabulous Oakland Chinatown.  Our community
     boasts a private pool and parking garage, and a well-maintained open-air courtyard. We are within easy proximity
     of both Uptown and Downtown business areas as well as 3 BART stations.
   </p>
 
   <p>
     Our building was erected in 1961 as apartment housing. and we became a condominium community of 33 homes
-    during the 1970's.
+    during the 1970's.  Meet our current Board of Directors <%= link_to "here", static_pages_board_path %>.
   </p>
 
   <p>
@@ -26,7 +26,7 @@
   </p>
 
   <p>
-    Or, contact us by email <%= link_to "here", static_pages_board_path  %>
+    Or, contact us by email <%= link_to "here", static_pages_board_path %>.
   </p>
 
 </div>
