--- a/app/views/static_pages/board.html.erb
+++ b/app/views/static_pages/board.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, "Our Board") %>
-<h1>Meet the Board</h1>
-<p>
+
+<div class="container">
+  <h2>Meet the Board</h2>
+  <p>
   <ul>
     <li>President Patrick Forest</li>
     <li>Vice-President Jabari Reeves</li>
     <li>Treasurer Jian Lin</li>
     <li>Secretary Sheri Wilson</li>
   </ul>
-</p>
+  </p>
+</div>
+
