--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<!--Registration and login links-->
 <p class="navbar-text pull-right">
   <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
@@ -25,7 +26,25 @@
     <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 
-<%= yield %>
+  <!--Navigation-->
+  <div id="heading" class="container">
+    <h1><%=image_tag "Welcome-Home-Logo.jpg" %><span id="welcome">to King's Court Condominiums</span></h1>
+    <h6> Welcome to the website for the King's Court Homeowners Association.  Please feel free to contact us with comments or suggestions.</h6>
+  </div>
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <ul class="nav navbar-nav">
+          <li class="active"><%= link_to "Home", static_pages_home_path %></li>
+          <li><%= link_to "About Us", static_pages_about_path %></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#members">Members</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <%= yield %>
 
   <footer class="panel-footer">
     Webmaster: Sheri Wilson
