creates a members page
-all links requiring sign-in will go here

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
           <li class="active"><%= link_to "Home", static_pages_home_path %></li>
           <li><%= link_to "About Us", static_pages_about_path %></li>
           <li><a href="#">Contact Us</a></li>
-          <li><a href="#members">Members</a></li>
+          <li><%= link_to "Members", static_pages_members_path %></li>
         </ul>
       </div>
     </div>
