--- a/app/views/static_pages/board.html.erb
+++ b/app/views/static_pages/board.html.erb
@@ -2,13 +2,31 @@
 
 <div class="container">
   <h2>Meet the Board</h2>
-  <p>
   <ul>
-    <li>President Patrick Forest</li>
-    <li>Vice-President Jabari Reeves</li>
-    <li>Treasurer Jian Lin</li>
-    <li>Secretary Sheri Wilson</li>
+
+      <dl>
+        <dt>President Patrick Forest</dt>
+      </dl>
+      <dl>
+        <dt>Vice-President Jabari Reeves</dt>
+      </dl>
+      <dl>
+        <dt>Treasurer Jian Lin</dt>
+      </dl>
+      <dl>
+        <dt>Secretary Sheri Wilson</dt>
+        <%=image_tag "sheri.jpg" %>
+        <dd>
+            Sheri has lived at King’s Court since September, 2014 and was elected to the Board not long after .
+            Originally from New York, she spent 18 years in South Florida raising her 2 daughters before moving
+            to the Bay area.  She now considers Oakland her permanent home.
+            Sheri is a software developer and brings her love of solving problems to her work on the Board.
+            In her free time, she enjoys — building this website!  She also loves walking Lake Merritt,
+            spending time with friends, cooking, dining out, and traveling.
+            Favorite quote: <quote>“Life is not fair, but life is not fair for anyone.
+            That makes life fair.” </quote>— Anonymous
+          </dd>
+      </dl>
   </ul>
-  </p>
 </div>
 
