creates a contact us page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,8 @@
         <ul class="nav navbar-nav">
           <li class="active"><%= link_to "Home", static_pages_home_path %></li>
           <li><%= link_to "About Us", static_pages_about_path %></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><%= link_to "Contact Us", static_pages_contact_path %></li>
+          <li><%= link_to "Meet the Board", static_pages_board_path %></li>
           <li><%= link_to "Members", static_pages_members_path %></li>
         </ul>
       </div>
