--- a/app/views/static_pages/board.html.erb
+++ b/app/views/static_pages/board.html.erb
@@ -11,7 +11,7 @@
         <dt>Vice-President Jabari Reeves</dt>
       </dl>
       <dl>
-        <dt>Treasurer Jian Lin</dt>
+        <dt>Treasurer Jian (Ken) Lin</dt>
       </dl>
       <dl>
         <dt>Secretary Sheri Wilson</dt>
