--- a/app/views/static_pages/members.html.erb
+++ b/app/views/static_pages/members.html.erb
@@ -3,9 +3,9 @@
 <!--Members interest areas-->
 <div class="container">
   <h2 id="members">Member Links</h2>
+  <p>Please sign in to access member content.</p>
     <ul class="menu">
       <li>Member Directory</li>
-      <li><%= link_to "Meet the Board", static_pages_board_path %></li>
       <li>Board Meeting Minutes Archive</li>
       <li>Board Meeting Agenda</li>
       <li>Newsletter Archive</li>
