--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,15 +1,17 @@
  <h2>Contact Us</h2>
 
   <%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
-      <%= f.input :name, :required => true %>
-      <%= f.input :email, :required => true %>
-      <%= f.input :message, :as => :text, :required => true %>
-      <div class= "hidden">
-        <%= f.input :nickname, :hint => 'Leave this field blank!' %>
-      </div>
-      <div>
-        </br>
-        <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
-      </div>
+     <div class="input-group input-group-md">
+       <%= f.input :name, :required => true, :class=> "form-control" %>
+       <%= f.input :email, :required => true, :class=>"form-control" %>
+       <%= f.text_area :message, :size=> "60x10", :required => true %>
+       <div class= "hidden">
+         <%= f.input :nickname, :hint => 'Leave this field blank!' %>
+       </div>
+       <div>
+         </br>
+         <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
+       </div>
+     </div>
   <% end %>
 
