--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="item">
-          <%=image_tag "kc4" %>
+          <%=image_tag "kc4.jpg" %>
           <div class="carousel-caption">
             <h4>Our Courtyard</h4>
           </div>
