--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -25,6 +25,6 @@
   </p>
 
   <p>
-    Or, contact us by email <%= link_to "here", static_pages_board_path %>.
+    Or, contact us by email <%= link_to "here", new_contact_path %>.
   </p>
 
