--- a/app/views/static_pages/board.html.erb
+++ b/app/views/static_pages/board.html.erb
@@ -4,7 +4,7 @@
   <ul>
 
       <dl>
-        <dt>President Patrick Forest</dt>
+        <dt>President Patrick Forrest</dt>
       </dl>
       <dl>
         <dt>Vice-President Jabari Reeves</dt>
