--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,7 @@
 
 #welcome {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    text-align: center;
 }
 
 .hidden { display: none; }
