--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,12 @@
 
   <!--Navigation-->
   <div id="heading" class="container">
-    <h1><%=image_tag "Welcome-Home-Logo.jpg" %><span id="welcome">to King's Court Condominiums</span></h1>
+    <row>
+      <h1><span id="welcome1">Welcome Home </span></h1>
+    </row>
+    <row>
+      <h1> <span id="welcome2"> to King's Court Condominiums</span></h1>
+    </row>
     <h6> Welcome to the website for the King's Court Homeowners Association.  Please feel free to contact us with comments or suggestions.</h6>
   </div>
   <nav class="navbar navbar-default" role="navigation">
