--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,21 @@
   <!--Navigation-->
   <div id="heading" class="container">
     <row>
-      <h1><span id="welcome1">Welcome Home </span></h1>
+      <div class="col-lg-12">
+         <h1><span id="welcome1">Welcome Home </span></h1>
+      </div>
     </row>
     <row>
-      <h1> <span id="welcome2"> to King's Court Condominiums</span></h1>
+      <div class ="col-lg-6 col-lg-offset-4">
+        <h1> <span id="welcome2"> to King's Court Condominiums</span></h1>
+      </div>
     </row>
-    <h6> Welcome to the website for the King's Court Homeowners Association.  Please feel free to contact us with comments or suggestions.</h6>
+    <row>
+      <div class="col-lg-11">
+        <h6> Welcome to the website for the King's Court Homeowners Association.
+          Please feel free to contact us with comments or suggestions.</h6>
+      </div>
+    </row>
   </div>
   <nav class="navbar navbar-default" role="navigation">
     <div class="container">
