fixes homepage view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,12 +19,8 @@
 }
 
 #welcome1 {
-  font-size: 200%;
-  color: mediumseagreen;
-}
-
-#welcome2 {
-
+  font-size: 175%;
+  color: #468499;
 }
 
 .hidden { display: none; }
