--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 
-  <!--Navigation-->
+  <!--Header-->
   <div id="heading" class="container">
     <row>
       <div class="col-lg-12">
@@ -45,6 +45,8 @@
       </div>
     </row>
   </div>
+
+  <!-- Navigation-->
   <nav class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -63,6 +65,7 @@
     <%= yield %>
   </div>
 
+  <!-- Footer-->
   <footer class="panel-footer">
     Webmaster: Sheri Wilson
   </footer>
